comfyui/namespace-comfyui.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: comfyui
  labels:
    app.kubernetes.io/name: comfyui
    app.kubernetes.io/managed-by: argoCD
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
