comfyui/service-comfyui.yaml
apiVersion: v1
kind: Service
metadata:
  name: comfyui
  namespace: comfyui
  labels:
    app: comfyui
    app.kubernetes.io/name: comfyui
    app.kubernetes.io/instance: comfyui
    app.kubernetes.io/managed-by: argoCD
spec:
  selector:
    app: comfyui
  ports:
    - name: http
      port: 8188
      targetPort: http
