comfyui/ingress-comfyui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comfyui
  namespace: comfyui
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: comfyui-hsts@kubernetescrd
  labels:
    app: comfyui
    app.kubernetes.io/name: comfyui
    app.kubernetes.io/instance: comfyui
    app.kubernetes.io/managed-by: argoCD
spec:
  ingressClassName: traefik
  rules:
    - host: comfyui.w386.k8s.my.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: comfyui
                port:
                  number: 8188
